# ansible-kubeadm

./: .ansible-lint  .gitignore  .gitlab-ci.yml  .yamllint  Dockerfile  LICENSE.md  README.md  Vagrantfile  docker-compose.override.yaml.sample  docker-compose.yaml  galaxy.yml  pyproject.toml  tox.ini
.github/workflows/: build-test-image.yml  run-test.yml  weekly.yml
.gitlab-ci/: build-tooling-image.yml
.gitlab-ci/tooling/: Dockerfile
docs/: hooks.md  hooks_and_plugins.md  quickstart.md  tips_tricks.md  variables.md
docs/guides/: join_nodes.md
playbooks/: 00-apiserver-proxy.yml  00-inventory.yml  00-site.yaml  00-site.yml  00_apiserver_proxy.yml  00_inventory.yml  01-site.yml  01_site.yml  02-node-upgrade.yml  02_node_upgrade.yml  99-change-cgroup-driver.yml  apiserver-proxy.yml
plugins/filter/: bootstrap_token.py
plugins/modules/: kubectl.py  pkg_version_match.py
roles/apiserver-proxy/defaults/: main.yml
roles/apiserver-proxy/tasks/: main.yml
scripts/: detect-user.sh  lint.sh
tests/: ansible-2.10-constraints.txt  ansible-2.9-constraints.txt  ansible.requirements.yml  conftest.py  git-creds.sh  requirements.txt  test_basic.py  test_terraform.py
tests/features/: haproxy.feature  install.feature  join_nodes.feature  upgrade.feature
tests/helpers/: ansible.py  provider.py  terraform.py  vagrant.py
tests/playbooks/: cni.yml  docker.yml  fix-dns.yml  prepare.yml  verify.yml
tests/terraform/: .terraform.lock.hcl  control_plane.tf  inventory.tf  inventory.tpl  network.tf  nodes.tf  openstack.tf  variable.tf  versions.tf  workers.tf
(+142 files in other folders)
